--- a/css/style.css
+++ b/css/style.css
@@ -205,10 +205,17 @@ section {
 
 .about .row .image {
   flex: 1 1 40rem;
+  display: flex;
+  /* 가로 정렬을 위해 추가 */
+  align-items: center;
+  /* 세로 정렬을 위해 추가 */
+  justify-content: center;
+  /* 가로 정렬을 위해 추가 */
 }
 
 .about .row .image img {
-  width: 100%;
+  height: 30rem;
+  width: 30rem;
 }
 
 .about .row .content {
@@ -262,9 +269,78 @@ section {
   background-color: var(--blue);
 }
 
+.contact .row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
 
+.contact .row .image {
+  flex: 1 1 40rem;
+}
 
+.contact .row .image img {
+  width: 100%;
+}
 
+.contact .row form {
+  flex: 1 1 40rem;
+}
+
+.contact .row form .box {
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  border-radius: .5rem;
+  background-color: var(--light-bg);
+  font-size: 1.8rem;
+  color: var(--white);
+  padding: 1.4rem;
+  text-transform: none;
+}
+
+.contact .row form span {
+  font-size: 1.6rem;
+  color: var(--light-white);
+}
+
+.contact .row form .radio {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.contact .row form .radio label {
+  font-size: 1.6rem;
+  color: var(--light-white);
+  margin-left: .5rem;
+  cursor: pointer;
+}
+
+.contact .row form .radio #female {
+  margin-left: 2rem;
+}
+
+.contact .row form .radio #female:checked~label[for="female"] {
+  color: var(--blue);
+}
+
+.contact .row form .radio #male:checked~label[for="male"] {
+  color: var(--blue);
+}
+
+.contact .row form .radio input {
+  appearance: none;
+  height: 2rem;
+  width: 2rem;
+  background-color: var(--light-white);
+  cursor: pointer;
+}
+
+.contact .row form .radio input:checked {
+  background-color: var(--blue);
+  border-radius: 5rem;
+}
 
 
 
