--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
 
 :root {
   --blue: #1D49A7;
-  --white: #fff;
-  --light-white: #aaa;
-  --black: #3d3d3d;
-  --light-bg: #4b4b4b;
+  --red: #EB473D;
+  --white: #313131;
+  --light-white: #4a4a4a;
+  --black: #ffffff;
+  --light-bg: #c8c8c8;
 }
 
 * {
@@ -41,7 +42,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--blue);
+  background-color: var(--light-bg);
   border-radius: 5rem;
 }
 
@@ -155,7 +156,7 @@ section {
 .home .row .content h3 {
   margin-bottom: 1rem;
   font-size: 10rem;
-  color: var(--white);
+  color: var(--red);
   line-height: 1;
 }
 
