웹사이트 디자인 완료

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ section {
   margin-bottom: 2.5rem;
   text-align: center;
   font-size: 4rem;
-  color: var(--white);
+  color: var(--red);
   text-transform: uppercase;
 }
 
